--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
 body {
-    background-color: #eee;
-    text-align: center;
+  background-color: #eee;
+  text-align: center;
 }
 h1 {
-    color: palevioletred;
+  color: palevioletred;
 }
 button:hover {
-    background-color: palevioletred;
-    cursor: pointer;
+  background-color: palevioletred;
+  cursor: pointer;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
   }
-  
+  to {
+    opacity: 1;
+  }
+}
